--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
 <body>
   <canvas id="xxx" width=300 height=300></canvas>
   <div id=actions class="actions">
-    <button id=eraser>橡皮擦</button>
-    <button id=brush>画笔</button>
+      <svg id=pen class="active icon">
+          <use xlink:href="#icon-pen"></use>
+      </svg>
+      <svg id=eraser class="icon">
+          <use xlink:href="#icon-eraser"></use>
+      </svg>
+   <ol class="pencolor">
+     <li id="black" class="black active"></li>
+     <li id="red" class="red"></li>
+     <li id="yellow" class="yellow"></li>
+     <li id="blue" class="blue"></li>
+     <li id="green" class="green"></li>
+   </ol>   
   </div>
 <script src="./c.js"></script>
+<script src="//at.alicdn.com/t/font_871815_iikqgjamq3q.js"></script>
 </body>
 
 </html>
