添加清除保存并调试

--- a/index.html
+++ b/index.html
@@ -17,16 +17,26 @@
       <svg id=eraser class="icon">
           <use xlink:href="#icon-eraser"></use>
       </svg>
+      <svg id=clear class="icon">
+          <use xlink:href="#icon-clear"></use>
+      </svg>
+      <svg id=save class="icon">
+          <use xlink:href="#icon-save"></use>
+      </svg>
    <ol class="pencolor">
      <li id="black" class="black active"></li>
      <li id="red" class="red"></li>
      <li id="yellow" class="yellow"></li>
      <li id="blue" class="blue"></li>
      <li id="green" class="green"></li>
-   </ol>   
+   </ol>  
+   <ol class="sizes">
+     <li id="thin" class="thin active">细</li>
+     <li id="thick" class="thick">粗</li>
+   </ol> 
   </div>
 <script src="./c.js"></script>
-<script src="//at.alicdn.com/t/font_871815_iikqgjamq3q.js"></script>
+<script src="//at.alicdn.com/t/font_871815_xxm8zeiznla.js"></script>
 </body>
 
 </html>
